# evolving-beings

./: .gitignore  CLAUDE.md  IDEAS.md  Readme.md  environment.yml  pyproject.toml  run.py
src/: being.py  being_sprite.py  cell.py  playground.ipynb  world.py
src/evolving_beings/: __init__.py  config.py  main.py
src/evolving_beings/renderer/: __init__.py  colors.py  pygame_renderer.py  ui.py
src/evolving_beings/simulation/: __init__.py  being.py  resource.py  spatial.py  terrain.py  world.py
