[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolving-beings"
version = "0.1.0"
description = "A living being simulator exploring emergent behavior in 2D worlds"
readme = "Readme.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pygame-ce>=2.4.0",
    "numpy>=1.26.0",
    "noise>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
evolving-beings = "evolving_beings.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/evolving_beings"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

